--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
     display: block;
 }
 
-.ativo {
+.botao.ativo {
     background-color: var(--botao-ativo);
     border-bottom: 40x solid var(--verde);
 }
