--- a/style.css
+++ b/style.css
@@ -88,9 +88,11 @@ body {
     text-transform: uppercase;
   }
   .contador {
-    font-size: 20px;
-    text-align: center;
-}
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
 .contador-digito {
     padding: 0 16px;
     text-align: center;
