--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ body {
     color: var(--verde);
 }
 
+
 .botao {
-    font-family: "Chakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -62,8 +63,9 @@ body {
 
 .botao.ativo {
     background-color: var(--botao-ativo);
-    border-bottom: 40x solid var(--verde);
+    border-bottom: 4px solid var(--verde);
 }
+
 .abas-textos {
     background-color: var(--texto-fundo);
     padding: 40px;
@@ -72,26 +74,28 @@ body {
 
 .aba-conteudo.ativo {
     display: block;
-  }
+}
 
-  .aba-conteudo {
+.aba-conteudo {
     display: none;
-  }
+}
 
-  .aba-conteudo-titulo-principal {
+.aba-conteudo-titulo-principal {
     font-size: 28px;
     text-align: center;
-  }
-  .aba-conteudo-titulo-secundario {
+}
+
+.aba-conteudo-titulo-secundario {
     text-align: center;
     color: var(--verde);
     text-transform: uppercase;
-  }
-  .contador {
+}
+
+.contador {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-  }
+}
 
 .contador-digito {
     padding: 0 16px;
@@ -114,14 +118,14 @@ body {
 
 @media screen and (min-width: 768px) {
     .botoes {
-      display: flex;
+        display: flex;
     }
 
     .botao:first-child {
         border-radius: 40px 0 0 0;
     }
-    
+
     .botao:last-child {
         border-radius: 0 40px 0 0;
-      }
- }
+    }
+}
